--- a/packages/document/docs/zh/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/overview.mdx
@@ -4,6 +4,7 @@
 
 官方插件包括:
 
+- [@rspress/plugin-llms](./llms): 为 Rspress 站点生成 [llms.txt](https://llmstxt.org/) 相关文件，使大模型可以更好地理解你的文档站。
 - [@rspress/plugin-medium-zoom](./medium-zoom)：[medium-zoom](https://github.com/francoischalifour/medium-zoom) 集成插件，用于支持 MediumZoom 图片放大效果。
 - [@rspress/plugin-client-redirects](./client-redirects)：支持客户端重定向。
 - [@rspress/plugin-last-updated](./last-updated)：支持显示最后更新时间。
