--- a/packages/document/docs/en/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/overview.mdx
@@ -4,6 +4,7 @@
 
 Official plugins include:
 
+- [@rspress/plugin-llms](./llms): Generate [llms.txt](https://llmstxt.org/) related files for your Rspress site, allowing large language models to better understand your documentation site.
 - [@rspress/plugin-medium-zoom](./medium-zoom): [medium-zoom](https://github.com/francoischalifour/medium-zoom) plugin, used to zoom in images.
 - [@rspress/plugin-client-redirects](./client-redirects)：Support client redirects.
 - [@rspress/plugin-last-updated](./last-updated): Support for displaying the last update time of the article.
