--- a/e2e/fixtures/plugin-preview-custom-entry/doc/index.mdx
+++ b/e2e/fixtures/plugin-preview-custom-entry/doc/index.mdx
@@ -12,6 +12,8 @@ export default function HelloWorld() {
 }
 ```
 
+{/* <code src="./Demo.tsx" previewMode="iframe"/> */}
+
 ```vue iframe
 <template>
   <div>Hello World VUE</div>
