--- a/e2e/fixtures/plugin-playground/doc/index.mdx
+++ b/e2e/fixtures/plugin-playground/doc/index.mdx
@@ -13,3 +13,10 @@ export default function HelloWorld() {
   return <div>Hello World Internal (vertical)</div>;
 }
 ```
+
+```tsx
+const a: number = 1;
+export default function HelloWorld() {
+  return <div>Hello World Internal (default) (tsx) {a}</div>;
+}
+```
