chore: update snapshot

--- a/e2e/fixtures/plugin-playground/doc/index.mdx
+++ b/e2e/fixtures/plugin-playground/doc/index.mdx
@@ -17,6 +17,6 @@ export default function HelloWorld() {
 ```tsx
 const a: number = 1;
 export default function HelloWorld() {
-  return <div>Hello World Internal (default) (tsx) {a}</div>;
+  return <div>Hello World Internal (tsx) {a}</div>;
 }
 ```
