fix(plugin-playground): disable monaco editor ts check for supporting tsx #2028 (#2147)
Co-authored-by: LonelySnowman <111493458+LonelySnowman@users.noreply.github.com>

--- a/e2e/fixtures/plugin-playground/doc/index.mdx
+++ b/e2e/fixtures/plugin-playground/doc/index.mdx
@@ -13,3 +13,10 @@ export default function HelloWorld() {
   return <div>Hello World Internal (vertical)</div>;
 }
 ```
+
+```tsx
+const a: number = 1;
+export default function HelloWorld() {
+  return <div>Hello World Internal (tsx) {a}</div>;
+}
+```
