--- a/packages/document/docs/zh/fragments/builtin-components.mdx
+++ b/packages/document/docs/zh/fragments/builtin-components.mdx
@@ -178,19 +178,19 @@ interface LinkCardProps {
 }
 ```
 
-## Helmet
+## Head
 
-一般用于在文档中设置自定义 head 内容（基于 [react-helmet-async](https://www.npmjs.com/package/react-helmet-async)）。使用方法如下：
+一般用于在文档中设置自定义 head 内容（基于 [unhead](https://www.npmjs.com/package/unhead)）。使用方法如下：
 
 ```tsx title="index.tsx"
 // 以下为一个自定义组件，你可以将其引入到文档中
-import { Helmet } from 'rspress/runtime';
+import { Head } from 'rspress/runtime';
 
 function App() {
   return (
-    <Helmet>
+    <Head>
       <meta property="og:description" content="Out-of-box Rspack build tools" />
-    </Helmet>
+    </Head>
   );
 }
 ```
