feat: use `@rsbuild-image/rspress` instead of `@rspress/plugin-image`

--- a/packages/document/docs/en/plugin/system/introduction.mdx
+++ b/packages/document/docs/en/plugin/system/introduction.mdx
@@ -4,7 +4,7 @@ The plugin system is a crucial part of Rspress, which allows you to easily exten
 
 The overall architecture of Rspress is shown in the figure below:
 
-![Rspress Architecture](https://lf3-static.bytednsdoc.com/obj/eden-cn/uhbfnupenuhf/edenx-doc/arch-en.png)
+![Rspress Architecture](https://assets.rspack.dev/rsdoctor/css-extract-loader.png)
 
 Rspress is divided into two parts: **Node Side** and **Browser Runtime**. Through the plugin system, you can easily extend the abilities of these two parts. Specifically, you can extend the ability to:
 
