--- a/packages/document/docs/zh/plugin/system/introduction.mdx
+++ b/packages/document/docs/zh/plugin/system/introduction.mdx
@@ -4,7 +4,7 @@
 
 Rspress 的整体架构如下图所示：
 
-![Rspress 架构图](https://lf3-static.bytednsdoc.com/obj/eden-cn/uhbfnupenuhf/edenx-doc/arch.png)
+![Rspress 架构图](@rstack/resource/rsdoctor/css-extract-loader.png)
 
 Rspress 整体分为**Node 端**和**浏览器运行时**两部分。通过插件机制，你可以轻松地扩展这两部分的功能。具体来说，你可以扩展如下的能力:
 
