chore: update the link

--- a/e2e/fixtures/markdown-link/doc/guide/index.mdx
+++ b/e2e/fixtures/markdown-link/doc/guide/index.mdx
@@ -30,7 +30,7 @@
 [Definition: ./installation.mdx]: ./installation.mdx
 [Definition: installation.mdx(TODO)]: installation.mdx
 
-## RelativeLinks with Subfolders
+## RelativeLinks with subfolders
 
 - [./subfolder/foo](./subfolder/foo)
 - [subfolder/foo(TODO)](subfolder/foo)
@@ -49,7 +49,7 @@
 [Definition2: ./subfolder/foo.mdx]: ./subfolder/foo.mdx
 [Definition2: subfolder/foo.mdx(TODO)]: subfolder/foo.mdx
 
-## RelativeLinks to Subfolders index
+## RelativeLinks to subfolders index
 
 - [./subfolder](./subfolder)
 - [subfolder(TODO)](subfolder)
