fix(shiki): add diff language token and remove useless prism token

--- a/e2e/fixtures/plugin-shiki/doc/index.mdx
+++ b/e2e/fixtures/plugin-shiki/doc/index.mdx
@@ -43,3 +43,10 @@ console.log('2');
 console.log('3'); // [!code highlight]
 console.log('4'); // [!code highlight]
 ```
+
+```diff
+export function foo() {
+-  console.log('Diff remove');
++  console.log('Diff add');
+}
+```
