feat: add new `CodeBlockRuntime` component
related #2126

--- a/packages/document/docs/en/fragments/builtin-components.mdx
+++ b/packages/document/docs/en/fragments/builtin-components.mdx
@@ -560,3 +560,29 @@ function App() {
 import { Toc } from '@theme';
 
 <Toc />
+
+## CodeBlockRuntime
+
+Render code block in runtime
+
+```tsx title="index.mdx"
+import { CodeBlockRuntime } from '@theme';
+
+function App() {
+  return (
+    <CodeBlockRuntime
+      lang="js"
+      title="index.js"
+      code={`console.log('Hello World!')`}
+    />
+  );
+}
+```
+
+import { CodeBlockRuntime } from '@theme';
+
+<CodeBlockRuntime
+  lang="js"
+  title="index.js"
+  code={`console.log('Hello World!')`}
+/>
