docs: incorrect usage of `socialLinks`

--- a/packages/document/docs/en/guide/default-theme/navbar.mdx
+++ b/packages/document/docs/en/guide/default-theme/navbar.mdx
@@ -129,7 +129,8 @@ export default defineConfig({
     socialLinks: [
       {
         icon: 'github',
-        link: 'github.com/web-infra-dev/modern.js',
+        mode: 'link',
+        content: 'https://github.com/web-infra-dev/modern.js',
       },
     ],
   },
