--- a/e2e/fixtures/code-block-runtime/docs/index.mdx
+++ b/e2e/fixtures/code-block-runtime/docs/index.mdx
@@ -5,3 +5,7 @@ import { CodeBlockRuntime } from '@theme';
   title="test.js"
   code="console.log('Hello CodeBlockRuntime!')"
 />
+
+```js title="test.js"
+console.log('Hello CodeBlock!');
+```
