--- a/e2e/fixtures/code-block-runtime/docs/index.mdx
+++ b/e2e/fixtures/code-block-runtime/docs/index.mdx
@@ -3,5 +3,9 @@ import { CodeBlockRuntime } from '@theme';
 <CodeBlockRuntime
   lang="js"
   title="test.js"
-  code="console.log('Hello CodeBlockRuntime!')"
+  code="console.log('Hello CodeBlock!');"
 />
+
+```js title="test.js"
+console.log('Hello CodeBlock!');
+```
