feat(CodeBlockRuntime): add shikiOptions prop

--- a/packages/document/docs/zh/fragments/builtin-components.mdx
+++ b/packages/document/docs/zh/fragments/builtin-components.mdx
@@ -569,6 +569,9 @@ function App() {
       lang="js"
       title="index.js"
       code={`console.log('Hello World!')`}
+      shikiOptions={{
+        {/* shikiOptions */}
+      }}
     />
   );
 }
