--- a/packages/document/docs/en/fragments/builtin-components.mdx
+++ b/packages/document/docs/en/fragments/builtin-components.mdx
@@ -574,6 +574,9 @@ function App() {
       lang="js"
       title="index.js"
       code={`console.log('Hello World!')`}
+      shikiOptions={{
+        {/* shikiOptions */}
+      }}
     />
   );
 }
