--- a/packages/document/docs/en/fragments/builtin-components.mdx
+++ b/packages/document/docs/en/fragments/builtin-components.mdx
@@ -359,11 +359,7 @@ import { PrevNextPage } from '@theme';
 
 function App() {
   return (
-    <PrevNextPage
-      type="prev"
-      text="Previous Page"
-      href="https://rspress.dev/"
-    />
+    <PrevNextPage type="prev" text="Previous Page" href="https://rspress.rs/" />
   );
 }
 ```
