--- a/packages/document/docs/en/guide/advanced/extend-build.mdx
+++ b/packages/document/docs/en/guide/advanced/extend-build.mdx
@@ -41,12 +41,12 @@ export default defineConfig({
 ```
 
 :::tip
-You can learn more about the configuration options through [Rsbuild - Config](https://rsbuild.dev/config/) documentation.
+You can learn more about the configuration options through [Rsbuild - Config](https://rsbuild.rs/config/) documentation.
 :::
 
 ### Configure Rspack
 
-You can configure Rspack through the [tools.rspack](https://rsbuild.dev/config/tools/rspack) option provided by Rsbuild:
+You can configure Rspack through the [tools.rspack](https://rsbuild.rs/config/tools/rspack) option provided by Rsbuild:
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
