--- a/packages/document/docs/zh/guide/advanced/extend-build.mdx
+++ b/packages/document/docs/zh/guide/advanced/extend-build.mdx
@@ -43,12 +43,12 @@ export default defineConfig({
 ```
 
 :::tip
-你可以通过 [Rsbuild - 配置](https://rsbuild.dev/zh/config/) 文档来了解更多的配置项。
+你可以通过 [Rsbuild - 配置](https://rsbuild.rs/zh/config/) 文档来了解更多的配置项。
 :::
 
 ### Rspack 配置
 
-你可以通过 Rsbuild 提供的 [tools.rspack](https://rsbuild.dev/config/tools/rspack) 选项来修改 Rspack 的配置：
+你可以通过 Rsbuild 提供的 [tools.rspack](https://rsbuild.rs/config/tools/rspack) 选项来修改 Rspack 的配置：
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
