--- a/packages/document/docs/zh/plugin/system/plugin-api.mdx
+++ b/packages/document/docs/zh/plugin/system/plugin-api.mdx
@@ -93,7 +93,7 @@ import GlobalUIComponents from '../../fragments/global-ui-components.mdx';
 
 - **类型**：`RsbuildConfig`
 
-Rspress 使用 [Rsbuild](https://github.com/web-infra-dev/rsbuild) 作为构建工具。通过 `builderConfig` 可以对 Rsbuild 进行配置，具体的配置项可以参考 [Rsbuild - 配置](https://rsbuild.dev/zh/config/)。
+Rspress 使用 [Rsbuild](https://github.com/web-infra-dev/rsbuild) 作为构建工具。通过 `builderConfig` 可以对 Rsbuild 进行配置，具体的配置项可以参考 [Rsbuild - 配置](https://rsbuild.rs/zh/config/)。
 
 > 当然，如果你想要直接配置 Rspack，也可以通过 `builderConfig.tools.rspack` 进行配置。
 
