--- a/packages/document/docs/zh/guide/basic/ssg.mdx
+++ b/packages/document/docs/zh/guide/basic/ssg.mdx
@@ -58,7 +58,7 @@ export default defineConfig({
 });
 ```
 
-关于 `builderConfig.html.tags` 更详细的配置，请参考[文档](https://rsbuild.dev/zh/config/html/tags)。
+关于 `builderConfig.html.tags` 更详细的配置，请参考[文档](https://rsbuild.rs/zh/config/html/tags)。
 
 ## 预览产物
 
