docs: `facet` should be `lang:` instead of `language:`

--- a/packages/document/docs/en/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/algolia.mdx
@@ -291,7 +291,7 @@ const Search = () => {
         apiKey: '599cec31baffa4868cae4e79f180729b',
         indexName: 'docsearch',
         searchParameters: {
-          facetFilters: [`language:${lang}`],
+          facetFilters: [`lang:${lang}`],
         },
       }}
     />
