--- a/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
@@ -204,18 +204,23 @@ new Crawler({
       indexName: 'doc_search_rspress_pages',
       pathsToMatch: ['https://rspress.rs/**'],
       recordExtractor: ({ $, helpers }) => {
+        const lvl0 =
+          $('.rspress-nav-menu-item.rspress-nav-menu-item-active')
+            .first()
+            .text() || 'Documentation';
+
         return helpers.docsearch({
           recordProps: {
             lvl0: {
               selectors: '',
-              defaultValue: 'Documentation',
+              defaultValue: lvl0,
             },
             lvl1: '.rspress-doc h1',
             lvl2: '.rspress-doc h2',
             lvl3: '.rspress-doc h3',
             lvl4: '.rspress-doc h4',
             lvl5: '.rspress-doc h5',
-            lvl6: '.rspress-doc pre > code', // 如果要搜索到代码块中的内容，增加这一行
+            lvl6: '.rspress-doc pre > code', // if you want to search code blocks, add this line
             content: '.rspress-doc p, .rspress-doc li',
           },
           indexHeadings: true,
@@ -226,9 +231,16 @@ new Crawler({
     },
   ],
   initialIndexSettings: {
-    doc_search_rspress_pages: {
+    YOUR_INDEX_NAME: {
       attributesForFaceting: ['type', 'lang'],
-      attributesToRetrieve: ['hierarchy', 'content', 'anchor', 'url'],
+      attributesToRetrieve: [
+        'hierarchy',
+        'content',
+        'anchor',
+        'url',
+        'url_without_anchor',
+        'type',
+      ],
       attributesToHighlight: ['hierarchy', 'content'],
       attributesToSnippet: ['content:10'],
       camelCaseAttributes: ['hierarchy', 'content'],
@@ -258,6 +270,8 @@ new Crawler({
         'exact',
         'custom',
       ],
+      highlightPreTag: '<span class="algolia-docsearch-suggestion--highlight">',
+      highlightPostTag: '</span>',
       minWordSizefor1Typo: 3,
       minWordSizefor2Typos: 7,
       allowTyposOnNumericTokens: false,
@@ -293,7 +307,7 @@ const Search = () => {
         apiKey: '599cec31baffa4868cae4e79f180729b',
         indexName: 'docsearch',
         searchParameters: {
-          facetFilters: [`language:${lang}`],
+          facetFilters: [`lang:${lang}`],
         },
       }}
     />
