--- a/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
@@ -231,7 +231,7 @@ new Crawler({
     },
   ],
   initialIndexSettings: {
-    YOUR_INDEX_NAME: {
+    doc_search_rspress_pages: {
       attributesForFaceting: ['type', 'lang'],
       attributesToRetrieve: [
         'hierarchy',
