--- a/packages/document/docs/zh/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/preview.mdx
@@ -36,7 +36,7 @@ export default defineConfig({
 ````md
 ```tsx
 function App() {
-  return <div>Hello World</div>;
+  return &lt;div>Hello World&lt;/div>;
 }
 
 export default App;
@@ -50,7 +50,7 @@ export default App;
 ````md
 ```tsx pure
 function App() {
-  return <div>Hello World</div>;
+  return &lt;div>Hello World&lt;/div>;
 }
 export default App;
 ```
@@ -61,7 +61,7 @@ export default App;
 ````md
 ```tsx preview
 function App() {
-  return <div>Hello World</div>;
+  return &lt;div>Hello World&lt;/div>;
 }
 export default App;
 ```
@@ -129,7 +129,7 @@ interface IframeOptions {
 ````md title="example.mdx"
 ```tsx iframe
 function App() {
-  return <div>Hello World</div>;
+  return &lt;div>Hello World&lt;/div>;
 }
 export default App;
 ```
