chore: update snapshot and test.ts

--- a/e2e/fixtures/custom-headers/doc/index.mdx
+++ b/e2e/fixtures/custom-headers/doc/index.mdx
@@ -6,6 +6,9 @@ head:
   - - meta
     - name: custom-meta-2
       content: custom-meta-content-2
+  - - meta
+    - http-equiv: refresh
+      content: 300
 ---
 
 # Hello world
