chore: remove redundant comment

--- a/packages/document/docs/en/guide/basic/deploy.mdx
+++ b/packages/document/docs/en/guide/basic/deploy.mdx
@@ -204,7 +204,7 @@ You can find more information about Zephyr Cloud [in their documentation](https:
 /** Rest of your imports */
 import { withZephyr } from 'zephyr-rspack-plugin';
 
-/** Create a small plugin to add to the rspress config */
+/** Create a small plugin */
 
 const zephyrRsbuildPlugin = () => ({
   name: 'zephyr-rsbuild-plugin',
