--- a/packages/document/docs/en/guide/basic/deploy.mdx
+++ b/packages/document/docs/en/guide/basic/deploy.mdx
@@ -184,11 +184,11 @@ You can deploy your Rspress site on [Kinsta](https://kinsta.com/static-site-host
 
 6. Click the **Create site**.
 
-### Deploy to Zephyr Cloud
+### Deploy to zephyr cloud
 
 [Zephyr Cloud](https://zephyr-cloud.io) is a deployment orchestration platform allowing users to deploy applications bundled by major build tools such as Rspack, Rspress, Vite, webpack, Rollup, Rolldown, Parcel, Re.Pack and Metro with exceptional support for Micro-frontends. It enables users to bring their own cloud includes but not limited to: Cloudflare, Netlify, Fastly, etc.
 
-You can find more information about Zephyr Cloud and how to deploy with differrent build tools [in their documentation](https://docs.zephyr-cloud.io).
+You can find more information about Zephyr Cloud and how to deploy with different build tools [in their documentation](https://docs.zephyr-cloud.io).
 
 #### How to deploy
 
