--- a/packages/document/docs/zh/fragments/builtin-components.mdx
+++ b/packages/document/docs/zh/fragments/builtin-components.mdx
@@ -274,7 +274,7 @@ const Component = () => {
 
 ## Overview
 
-预览组件，查看[本站的效果](/zh/api)
+预览组件，查看[本站的效果](/zh/api/)
 
 ```tsx
 import { Overview } from 'rspress/theme';
