test(theme-default): adjust PackageManagerTabs E2E tests for  prop

--- a/e2e/fixtures/package-manager-tabs/doc/index.mdx
+++ b/e2e/fixtures/package-manager-tabs/doc/index.mdx
@@ -9,3 +9,7 @@ import { PackageManagerTabs } from '@theme';
 ## PackageManagerTabs b
 
 <PackageManagerTabs command="install rspress -D" />
+
+## PackageManagerTabs exec
+
+<PackageManagerTabs exec command="example-cli-tool --yes" />
