--- a/e2e/fixtures/check-dead-link/doc/en/guide/basic/quick-start.mdx
+++ b/e2e/fixtures/check-dead-link/doc/en/guide/basic/quick-start.mdx
@@ -17,3 +17,11 @@
 [./install.html](./install.html)
 
 [./install.mdx](./install.mdx)
+
+## Folders
+
+[../../api/index.mdx](../../api/index.mdx)
+
+[../../api/](../../api/)
+
+[../../api](../../api)
